Show user org info on user detail schema in s2s api
